--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 				cr_setSuspended(false);
 		};
 			 function isMobile(){
- 
+			console.log("aqio");
 		 if( /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent) ) {
 		 alert("you are in Mobile");
 		 return 1;
